# stock-market

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
src/: .env_template  .pre-commit-config.yaml  .pylintrc  Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt
src/elasticsearch/: elasticsearch_dbi.py
src/elasticsearch/tests/: test_elasticsearch_dbi.py
src/scripts/init_es_database/: README.md  es_mappings.py  main.py
src/scripts/populate_database/: main.py
src/scripts/populate_es_database/: README.md  main.py
src/test/: base.py  test.py
src/test/cases/api/: test_investement_calculator.py  test_portfolio.py  test_portofolio.py  test_stock_prices.py  test_stocks.py
src/tests/unit/: base.py  test.py
src/util/: config.py  util.py  utils.py
src/util/elasticsearch/: elasticsearch_dbi.py  es_portfolio.py  es_stock_prices.py  test_elasticsearch_dbi.py
src/util/logger/: logger.py  test_logger.py
src/webserver/: app.py  constants.py  decorators.py  flask_rest.py  gunicorn.conf.py  responses.py  server.py  stock_prices_daemon.py  wsgi.py
src/webserver/core/: investment_calculator.py  portfolio_management.py  portofolio_management.py  stock_prices_management.py  stocks_management.py  users_management.py
src/webserver/daemons/: stock_prices_daemon.py
src/webserver/model/: db.py  portfolio.py  portofolio.py  user.py
src/webserver/models/: db.py  user.py
src/webserver/routes/: api_routes.py  authentication.py  investment_calculator.py  portfolio.py  portofolios.py  stock_prices.py  stocks.py  users.py  utils.py
(+8 files in other folders)
