[tool.poetry]
name = "stock-market-api"
version = "1.0.0"
description = "Stock Market API"
authors = ["Szabo Cristian <cristi_bomfly@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch="7.5.1"
pandas="1.3.5"
yfinance="0.1.63"
yahoofinancials="1.6"
Werkzeug="0.16.1"
Flask="1.1.2"
flask-restplus="0.13.0"
Flask-SQLAlchemy="2.5.1"
SQLAlchemy="1.4.22"
pyjwt="1.7.1"
gevent="21.8.0"
gunicorn="20.1.0"
python-dotenv="0.19.1"
jinja2 = "<3.1.0"
itsdangerous = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
